tests/fixtures/rules-tests/bad/AG-025-v1-csharp-not-implemented.cs
public class AuthService {
    public bool Authenticate(string token) {
        throw new NotImplementedException();
    }

    public string GenerateToken(User user) {
        throw new NotImplementedException("JWT generation not implemented");
    }
}
